appId: host.exp.Exponent
---
# Happy path: Create a new game
- tapOn:
    id: "create-game-fab"
    optional: true
- tapOn: "+"
- waitForAnimationToEnd
- assertVisible: "Create a Game"
- tapOn:
    text: "Game title"
    optional: true
- tapOn:
    id: "game-title-input"
    optional: true
- inputText: "E2E Test Game"
- tapOn: "Football 5v5"
- tapOn: "+1h"
- tapOn: "+1d"
- tapOn: "Create game"
- waitForAnimationToEnd
- assertVisible: "E2E Test Game"
